fix dynamic layout problem

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -83,3 +83,9 @@ div > .row .col {
     width: 100%;
     height: 100%;
 }
+
+#hover {
+    display: none;
+    position: absolute;
+    z-index: 50;
+}
